--- a/notebooks/asa/05_GridSearch_CV_FeatRed_Pipe.ipynb
+++ b/notebooks/asa/05_GridSearch_CV_FeatRed_Pipe.ipynb
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1850,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1859,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1890,6 +1890,7 @@
        "      <th>param_model__max_depth</th>\n",
        "      <th>param_model__max_features</th>\n",
        "      <th>param_model__n_estimators</th>\n",
+       "      <th>param_pca__n_components</th>\n",
        "      <th>params</th>\n",
        "      <th>split0_test_score</th>\n",
        "      <th>split1_test_score</th>\n",
@@ -1904,21 +1905,22 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>15.997487</td>\n",
-       "      <td>3.066121</td>\n",
-       "      <td>1.058992</td>\n",
-       "      <td>0.17265</td>\n",
+       "      <td>98.410757</td>\n",
+       "      <td>22.195479</td>\n",
+       "      <td>0.971015</td>\n",
+       "      <td>0.164088</td>\n",
        "      <td>None</td>\n",
        "      <td>auto</td>\n",
        "      <td>100</td>\n",
+       "      <td>None</td>\n",
        "      <td>{'model__max_depth': None, 'model__max_feature...</td>\n",
-       "      <td>0.811111</td>\n",
-       "      <td>0.801684</td>\n",
-       "      <td>0.798401</td>\n",
-       "      <td>0.801431</td>\n",
-       "      <td>0.800842</td>\n",
-       "      <td>0.802694</td>\n",
-       "      <td>0.004366</td>\n",
+       "      <td>0.791667</td>\n",
+       "      <td>0.783249</td>\n",
+       "      <td>0.781145</td>\n",
+       "      <td>0.78468</td>\n",
+       "      <td>0.780471</td>\n",
+       "      <td>0.784242</td>\n",
+       "      <td>0.004003</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1927,22 +1929,22 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
-       "0      15.997487      3.066121         1.058992         0.17265   \n",
+       "0      98.410757     22.195479         0.971015        0.164088   \n",
        "\n",
        "  param_model__max_depth param_model__max_features param_model__n_estimators  \\\n",
        "0                   None                      auto                       100   \n",
        "\n",
-       "                                              params  split0_test_score  \\\n",
-       "0  {'model__max_depth': None, 'model__max_feature...           0.811111   \n",
+       "  param_pca__n_components                                             params  \\\n",
+       "0                    None  {'model__max_depth': None, 'model__max_feature...   \n",
        "\n",
-       "   split1_test_score  split2_test_score  split3_test_score  split4_test_score  \\\n",
-       "0           0.801684           0.798401           0.801431           0.800842   \n",
+       "   split0_test_score  split1_test_score  split2_test_score  split3_test_score  \\\n",
+       "0           0.791667           0.783249           0.781145            0.78468   \n",
        "\n",
-       "   mean_test_score  std_test_score  rank_test_score  \n",
-       "0         0.802694        0.004366                1  "
+       "   split4_test_score  mean_test_score  std_test_score  rank_test_score  \n",
+       "0           0.780471         0.784242        0.004003                1  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1972,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2005,7 +2007,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>RFC</td>\n",
-       "      <td>0.802694</td>\n",
+       "      <td>0.784242</td>\n",
        "      <td>{'model__max_depth': None, 'model__max_feature...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2014,10 +2016,10 @@
       ],
       "text/plain": [
        "  algo  mean_test_score                                             params\n",
-       "0  RFC         0.802694  {'model__max_depth': None, 'model__max_feature..."
+       "0  RFC         0.784242  {'model__max_depth': None, 'model__max_feature..."
       ]
      },
-     "execution_count": 43,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2028,7 +2030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 74,
    "metadata": {
     "scrolled": true
    },
@@ -2062,6 +2064,7 @@
        "      <th>param_model__max_depth</th>\n",
        "      <th>param_model__max_features</th>\n",
        "      <th>param_model__n_estimators</th>\n",
+       "      <th>param_pca__n_components</th>\n",
        "      <th>params</th>\n",
        "      <th>split0_test_score</th>\n",
        "      <th>split1_test_score</th>\n",
@@ -2077,21 +2080,22 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>RFC</td>\n",
-       "      <td>15.997487</td>\n",
-       "      <td>3.066121</td>\n",
-       "      <td>1.058992</td>\n",
-       "      <td>0.17265</td>\n",
+       "      <td>98.410757</td>\n",
+       "      <td>22.195479</td>\n",
+       "      <td>0.971015</td>\n",
+       "      <td>0.164088</td>\n",
        "      <td>None</td>\n",
        "      <td>auto</td>\n",
        "      <td>100</td>\n",
+       "      <td>None</td>\n",
        "      <td>{'model__max_depth': None, 'model__max_feature...</td>\n",
-       "      <td>0.811111</td>\n",
-       "      <td>0.801684</td>\n",
-       "      <td>0.798401</td>\n",
-       "      <td>0.801431</td>\n",
-       "      <td>0.800842</td>\n",
-       "      <td>0.802694</td>\n",
-       "      <td>0.004366</td>\n",
+       "      <td>0.791667</td>\n",
+       "      <td>0.783249</td>\n",
+       "      <td>0.781145</td>\n",
+       "      <td>0.78468</td>\n",
+       "      <td>0.780471</td>\n",
+       "      <td>0.784242</td>\n",
+       "      <td>0.004003</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2100,22 +2104,22 @@
       ],
       "text/plain": [
        "  algo  mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
-       "0  RFC      15.997487      3.066121         1.058992         0.17265   \n",
+       "0  RFC      98.410757     22.195479         0.971015        0.164088   \n",
        "\n",
        "  param_model__max_depth param_model__max_features param_model__n_estimators  \\\n",
        "0                   None                      auto                       100   \n",
        "\n",
-       "                                              params  split0_test_score  \\\n",
-       "0  {'model__max_depth': None, 'model__max_feature...           0.811111   \n",
+       "  param_pca__n_components                                             params  \\\n",
+       "0                    None  {'model__max_depth': None, 'model__max_feature...   \n",
        "\n",
-       "   split1_test_score  split2_test_score  split3_test_score  split4_test_score  \\\n",
-       "0           0.801684           0.798401           0.801431           0.800842   \n",
+       "   split0_test_score  split1_test_score  split2_test_score  split3_test_score  \\\n",
+       "0           0.791667           0.783249           0.781145            0.78468   \n",
        "\n",
-       "   mean_test_score  std_test_score  rank_test_score  \n",
-       "0         0.802694        0.004366                1  "
+       "   split4_test_score  mean_test_score  std_test_score  rank_test_score  \n",
+       "0           0.780471         0.784242        0.004003                1  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
